# file_search

./: .gitignore  ANALYSIS_REPORT.md  CODE_QUALITY_PLAN.md  COMPREHENSIVE_ANALYSIS_V8.md  COMPREHENSIVE_ANALYSIS_V9.md  COMPREHENSIVE_PLAN.md  COMPREHENSIVE_PLAN_V7.md  CURRENT_ENGINEERING_PLAN.md  DEVELOPER_GUIDE.md  EXECUTION_PLAN_P0_P1.md  FRONTEND_ANALYSIS.md  Parameter_Consistency_Audit.md  README.md  ROADMAP.md  TECHNICAL_GUIDE.md  TEST_OPTIMIZATION_PLAN.md  build_exe.py  code reivew.txt  core_logic.py  fctx.py  file_search.py  final_report.txt  final_test_results.txt  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  start_web_server.bat  test_out.txt  test_results.txt  web_app.py
.github/workflows/: lint.yml  test.yml
code_investigate/: 00_EXECUTIVE_SUMMARY.md  01_ARCHITECTURE_ANALYSIS.md  02_CODE_REVIEW_BUGS.md  03_POSITIONING_ROADMAP.md  04_PRODUCTION_READINESS.md  README.md
file_cortex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
file_cortex_core/: __init__.py  actions.py  config.py  context.py  duplicate.py  file_io.py  format_utils.py  process_utils.py  search.py  security.py  utils.py
file_cortex_core/gui/: __init__.py  batch_rename.py  duplicate_finder.py  path_collection.py
frontend/: package.json  vite.config.js
frontend/src/: App.vue  index.css
frontend/src/components/: Categorizer.vue
routers/: __init__.py  action_routes.py  common.py  fs_routes.py  http_routes.py  project_routes.py  schemas.py  services.py  ws_routes.py
static/css/: style.css
static/js/: api.js  app.js  main.js  state.js  ui.js
templates/: index.html
tests/: README.md  conftest.py  test_action_bridge_injection.py  test_actions.py  test_additional_coverage.py  test_ai_enhanced.py  test_api_v6.py  test_archive_paths.py  test_audit_fixes.py  test_audit_fixes_v58.py  test_bugfix_v632.py  test_bugfix_v633.py  test_bugfix_v7.py  test_cli_persistence_v10.py  test_collection.py  test_comprehensive.py  test_comprehensive_v63.py  test_concurrency_core.py  test_config.py  test_config_group_ops.py  test_config_history.py  test_config_save_atomicity.py  test_context_formatter.py  test_core_integration.py  test_core_logic.py  test_coverage_fill.py  test_desktop_security.py  test_dm_config.py  test_duplicates.py  test_e2e.py  test_execute_timeout.py  test_fileops_advanced.py  test_fileops_copy_extract.py  test_filesystem_edge_cases.py  test_format_utils_extended.py  test_frontend_contract.py  test_mcp_server.py  test_memory_limits.py  test_noise_reducer.py  test_packaging.py  (+32 more)
tmp_tests/: cm_safetycurrent
tmp_tests/cm_safety0/: large_mock_utf8.txt
