[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-cortex"
version = "6.2.0"
authors = [
    { name = "Developer", email = "dev@example.com" },
]
description = "A powerful workspace orchestrator and file processor for AI-assisted coding."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.117.0",
    "uvicorn>=0.37.0",
    "pydantic>=2.11.0",
    "jinja2>=3.1.2",
    "pathspec>=0.12.0",
    "charset-normalizer>=3.4.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
gui = [
    "customtkinter>=5.1.0",
]
build = [
    "pyinstaller>=6.18.0",
]

[project.scripts]
fctx = "fctx:main"
fctx-web = "web_app:main"

[tool.setuptools]
packages = ["file_cortex_core"]
py-modules = ["fctx", "web_app", "file_search"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# W: pycodestyle warnings
# I: isort (import sorting)
# N: pep8-naming
# UP: pyupgrade
# B: flake8-bugbear
# D: pydocstyle
# ANN: flake8-annotations
# C4: flake8-comprehensions
# RET: flake8-return
# SIM: flake8-simplify
select = ["E", "F", "W", "I", "N", "UP", "B", "D", "C4", "RET", "SIM"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring (conflict with D211)
    "D213", # Multi-line docstring summary should start at the second line
    "ANN101", # Missing type annotation for 'self'
    "ANN102", # Missing type annotation for 'cls'
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["file_cortex_core"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "google"
line_length = 100
